# pycoordination

./: .gitignore  PLAN-docs.md  PLAN-java-fidelity.md  PLAN-standalone-examples.md  README.md  coordination_oru_python_port_plan.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/verify/: SKILL.md
.github/workflows/: deploy.yml  docs.yml
coordination_oru/: __init__.py  abstract_trajectory_envelope_coordinator.py  abstract_trajectory_envelope_tracker.py  collision_event.py  critical_section.py  demo.py  dependency.py  forward_model.py  mission.py  network_configuration.py  robot_at_critical_section.py  robot_report.py  tracking_callback.py  trajectory_envelope_coordinator.py  trajectory_envelope_tracker_dummy.py
coordination_oru/coordinator/: abstract_coordinator.py  abstract_tracker.py  critical_section.py  mission.py  robot_report.py
coordination_oru/data/maps/: demo.pgm  demo.yaml
coordination_oru/metacsp/spatial/: pose.py  trajectory.py  trajectory_envelope.py  trajectory_envelope_solver.py
coordination_oru/metacsp/temporal/: allen.py  bounds.py  stp.py
coordination_oru/motionplanning/: __init__.py  abstract_motion_planner.py  hybrid_astar_planner.py  occupancy_map.py  reeds_shepp.py
coordination_oru/simulation/: rk4_tracker.py  sim_coordinator.py  sim_tracker.py
coordination_oru/simulation2D/: derivative.py  state.py  trajectory_envelope_coordinator_simulation.py  trajectory_envelope_tracker_rk4.py
coordination_oru/util/: example_runner.py  geometry.py  logging.py  paths.py
coordination_oru/viz/: __init__.py  pyglet_viewer.py  web_viewer.py
docs/: getting-started.md  index.md
docs/guides/: motion-planning.md  simulation.md  visualization.md
docs/reference/: coordinator.md  metacsp.md  motionplanning.md  simulation2D.md  trackers.md  viz.md
docs/theory/: coordination.md  envelopes.md  ordering-and-deadlocks.md
examples/: _common.py  convoy.py  dynamic_missions.py  five_robots_sine.py  three_robots.py  three_robots_oldpath.py  two_robots.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: Header.tsx  StatusBar.tsx  WorldView.tsx
frontend/src/lib/: dark-mode.ts  protocol.ts  robot-colors.ts  ws.ts
plans/: PLAN-builtin-planner.md  PLAN-standalone-examples.md
scripts/: gen_demo_map.py
tests/: conftest.py  test_convoy.py  test_deadlock_regression.py  test_dynamic_missions.py  test_hybrid_astar_planner.py  test_margin_and_async_replan.py  test_occupancy_map.py  test_reeds_shepp.py  test_rk4.py  test_start_in_critical_section.py  test_stp.py  test_three_robots.py  test_three_robots_oldpath.py  test_two_robots.py  test_util_logging.py  test_web_viewer.py
tests/manual/: _runner.py  three_robots_oldpath_viz.py  three_robots_viz.py  two_robots_viz.py
tests/paths/: __init__.py
