[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordination-oru"
version = "0.7.1"
description = "Python port of coordination_oru: a multi-robot trajectory-envelope coordinator."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ksatyaki" }]
license = { text = "GPL-3.0-or-later" }

dependencies = [
    "shapely>=2.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "structlog>=24.0",
    "attrs>=23.0",
    "pyyaml>=6.0",
    "scipy>=1.12",
    # viewers ship by default so `coordination-oru-demo` works out of the box
    "pyglet>=2.1",
    "starlette>=0.37",
    "uvicorn>=0.29",
    "websockets>=12.0",  # uvicorn's websocket backend — bare uvicorn ships none
]

[project.optional-dependencies]
future = [
    "ortools>=9.8",
    "qualreas>=0.6",
    "matplotlib>=3.8",
]
viz = []  # deprecated: the viewers are core dependencies now
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "httpx2>=2.0",
]

[project.scripts]
coordination-oru-demo = "coordination_oru.demo:main"

[tool.setuptools.packages.find]
include = ["coordination_oru*"]

[tool.setuptools.package-data]
"coordination_oru.data" = ["*.path", "maps/*"]
# web viewer frontend build (gitignored; built by npm before packaging)
"coordination_oru.viz" = ["static/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
